--- a/index.html
+++ b/index.html
@@ -214,9 +214,10 @@ $page_twcardtype = "summary";
 							<p class="answer"><span>大変申し訳ないのですが、当院は男性専門のクリニックですので、女性の方のご来院はお断りしております。</span></p>
 							<div class="inner">
 								<div class="textBox">
-									<p>ご家族や友人の方とご来院いただくこと自体は可能ですが、<strong>女性の方のご来院はお断り</strong>させていただいております。</p>
+									<p>ご友人は、男性の方のみ同伴が可能です。大変申し訳ありませんが、女性のご来院はお断りしております。なお、ご事情や必要に応じて、お母さまや配偶者（妻）など「<strong>女性の親族のみ同伴が可能</strong>」です。その旨、ご予約時にご相談ください。</p>
 									<div class="moreWrap">
-										<p>コンプレックスを解消するために来院されている患者さまが多く、スタッフ以外の女性が院内に居ることで、リラックスができなくなってしまいます。皆さまに快適にお過ごしいただくためデリケートに対応させていただいております。大変申し訳ありませんが、ご了承いただければ幸いです。</p>
+										<p>ゴリラクリニックは創業当初より、「男性専門」をコンセプトに運営しているクリニックです。
+											男性肌の特性など医療的な理由に加え、コンプレックスを解消するためにご来院される男性患者さまが快適に、またリラックスしてお過ごしいただけるようにという考えのもと、ご親族（母・妻など）以外の女性とのご来院や、カウンセリング時のご同席をお断りしております。 大変申し訳ありませんが、何卒ご理解賜りますようお願い申し上げます。</p>
 										<p class="link"><a href="/qaa/counseling/">&gt;&gt;&gt;カウンセリングに関するご質問</a></p>
 									</div>
 									<div class="cmnMore01">
